--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <title>Portfolio: Kenny Harris</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/standard.css">
+        <link rel="stylesheet" href="standard.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script  src="js/portfolio.js"></script>
+        <script  src="portfolio.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
     </head>
     <body>
