--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
     </head>
     <body>
-        <img class='board' id='white-board-top' src='images/white-board-top.jpg'>
-        <img class='board' id='white-board' src='images/white-board.jpg'>
-        <img class='board' id='white-board-bottom' src='images/white-board-bottom.jpg'>
+        <img class='board' id='white-board-top' src='white-board-top.jpg'>
+        <img class='board' id='white-board' src='white-board.jpg'>
+        <img class='board' id='white-board-bottom' src='white-board-bottom.jpg'>
 
         <div id='banner'>
             <nav>
@@ -21,11 +21,11 @@
                 <a id='resume' class='nav-link' href="#resume">Resume</a>
                 <a id='contact' class='nav-link' href="#contact">Contact</a>
                 <a id='linkedin' class='nav-link' href="https://www.linkedin.com/feed/">
-                    <img src='images/linkedin.png'></a>
+                    <img src='linkedin.png'></a>
             </nav>
         </div>
         <div id='home-page' class='page'>
-            <img id='kenny' src='images/kenny-crop3.png'>
+            <img id='kenny' src='kenny-crop3.png'>
             <div id="about-info">
                 <div class='headers'>
                     About
@@ -75,12 +75,12 @@
             </div>
             <div class='logo' id='education-logo'>
                 Education<br/>
-                <img src='images/arrow-right.png' class='logo-img'>
+                <img src='arrow-right.png' class='logo-img'>
             </div>
 
             <div class='logo' id='summary-logo'>
                 Personal Assets<br/>
-                <img src='images/arrow-left.png' class='logo-img'>
+                <img src='arrow-left.png' class='logo-img'>
             </div>
 
             <div id='education' class="data-list">
@@ -104,9 +104,9 @@
 
 
             <div class='logo' id='history-logo'>
-                <img src='images/arrow-down-left.png' class='logo-img2'>
+                <img src='arrow-down-left.png' class='logo-img2'>
                 History
-                <img src='images/arrow-down-right.png' class='logo-img2'>
+                <img src='arrow-down-right.png' class='logo-img2'>
             </div>
             <div id='history' class="data-list">
                 <div>
